# pca_football_profiling

./: .gitignore  CITATION.cff  README.md  feature_utils.py  pyproject.toml
data/Bundesliga/2017-2018/: Augsburg.csv  Bayern Munich.csv  Dortmund.csv  Eint Frankfurt.csv  Freiburg.csv  Hamburger SV.csv  Hannover 96.csv  Hertha BSC.csv  Hoffenheim.csv  Köln.csv  Leverkusen.csv  M'Gladbach.csv  Mainz 05.csv  RB Leipzig.csv  Schalke 04.csv  Stuttgart.csv  Werder Bremen.csv  Wolfsburg.csv
data/Bundesliga/2018-2019/: Augsburg.csv  Bayern Munich.csv  Dortmund.csv  Düsseldorf.csv  Eint Frankfurt.csv  Freiburg.csv  Hannover 96.csv  Hertha BSC.csv  Hoffenheim.csv  Leverkusen.csv  M'Gladbach.csv  Mainz 05.csv  Nürnberg.csv  RB Leipzig.csv  Schalke 04.csv  Stuttgart.csv  Werder Bremen.csv  Wolfsburg.csv
data/Bundesliga/2019-2020/: Augsburg.csv  Bayern Munich.csv  Dortmund.csv  Düsseldorf.csv  Eint Frankfurt.csv  Freiburg.csv  Hertha BSC.csv  Hoffenheim.csv  Köln.csv  Leverkusen.csv  M'Gladbach.csv  Mainz 05.csv  Paderborn 07.csv  RB Leipzig.csv  Schalke 04.csv  Union Berlin.csv  Werder Bremen.csv  Wolfsburg.csv
data/Bundesliga/2020-2021/: Arminia.csv  Augsburg.csv  Bayern Munich.csv  Dortmund.csv  Eint Frankfurt.csv  Freiburg.csv  Hertha BSC.csv  Hoffenheim.csv  Köln.csv  Leverkusen.csv  M'Gladbach.csv  Mainz 05.csv  RB Leipzig.csv  Schalke 04.csv  Stuttgart.csv  Union Berlin.csv  Werder Bremen.csv  Wolfsburg.csv
data/Bundesliga/2021-2022/: Köln.csv  (+17 more)
research/: 02. cross_seasonal_pc_correlations.ipynb  03. cross_league_pc_correlations.ipynb  04. cross_league_comparison.ipynb
(+498 files in other folders)
