[project]
name = "pca-football-profiling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.11,>=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy<=1.25",
    "pandas==2.0.0",
    "scikit-learn<1.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
